--- a/DAW_LABS/LAB 4/index.html
+++ b/DAW_LABS/LAB 4/index.html
@@ -32,8 +32,8 @@
   <section id="enlaces">
     ENLACES
     <br>
-    <a href="resources/irving.html" target="_blank"><article>JavaScript</article></a>
-    <a href="resources/preguntas.html" target="_blank"><article>Preguntas</article></a>
+    <a href="resources/javascript.html" target=""><article>JavaScript</article></a>
+    <a href="resources/preguntas.html" target=""><article>Preguntas</article></a>
   </section>
   <aside>
         <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/105622190&color=%234a1e27&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
