--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <!--Single Game Start-->
                     <div class="single-game mb-50">
                         <div class="game-img">
-                            <a href="https://github.com/irvingpercam/daw" target="_blank"><img src="assets/images/frontend/first.jpg" alt=""></a>
+                            <a href="https://github.com/irvingpercam/daw/tree/master/DAW_LABS/LAB%201-3" target="_blank"><img src="assets/images/frontend/first.jpg" alt=""></a>
                         </div>
                         <div class="game-content">
                             <h4><a href="https://github.com/irvingpercam/daw/tree/master/DAW_LABS/LAB%201-3" target="_blank">Lab 1, 2, 3</a></h4>
@@ -135,7 +135,7 @@
                     <!--Single Game Start-->
                     <div class="single-game mb-50">
                         <div class="game-img">
-                            <a href="https://github.com/irvingpercam/daw" target="_blank"><img src="assets/images/frontend/lab4.jpg" alt=""></a>
+                            <a href="https://github.com/irvingpercam/daw/tree/master/DAW_LABS/LAB%204" target="_blank"><img src="assets/images/frontend/lab4.jpg" alt=""></a>
                         </div>
                         <div class="game-content">
                             <h4><a href="https://github.com/irvingpercam/daw/tree/master/DAW_LABS/LAB%204" target="_blank">Lab 4</a></h4>
