Página de inicio - Update 2

--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@
                     <!--Single Game Start-->
                     <div class="single-game mb-50">
                         <div class="game-img">
-                            <a href="https://github.com/irvingpercam/daw" target="_blank"><img src="assets/images/game/game2.jpg" alt=""></a>
+                            <a href="https://github.com/irvingpercam/daw" target="_blank"><img src="assets/images/frontend/lab4.jpg" alt=""></a>
                         </div>
                         <div class="game-content">
-                            <h4><a href="https://github.com/irvingpercam/daw" target="_blank">the elder scroll</a></h4>
+                            <h4><a href="https://github.com/irvingpercam/daw" target="_blank">Lab Pendiente</a></h4>
                             <span>pc/xbox/ps4</span>
                         </div>
                     </div>
@@ -172,10 +172,10 @@
                     <!--Single Game Start-->
                     <div class="single-game mb-50">
                         <div class="game-img">
-                            <a href="https://github.com/irvingpercam/daw" target="_blank"><img src="assets/images/game/game5.jpg" alt=""></a>
+                            <a href="https://github.com/irvingpercam/daw" target="_blank"><img src="assets/images/frontend/lab4.jpg" alt=""></a>
                         </div>
                         <div class="game-content">
-                            <h4><a href="https://github.com/irvingpercam/daw" target="_blank">the elder scroll</a></h4>
+                            <h4><a href="https://github.com/irvingpercam/daw" target="_blank">Lab Pendiente</a></h4>
                             <span>pc/xbox/ps4</span>
                         </div>
                     </div>
@@ -185,10 +185,10 @@
                     <!--Single Game Start-->
                     <div class="single-game mb-50">
                         <div class="game-img">
-                            <a href="https://github.com/irvingpercam/daw" target="_blank"><img src="assets/images/game/game1.jpg" alt=""></a>
+                            <a href="https://github.com/irvingpercam/daw" target="_blank"><img src="assets/images/frontend/lab4.jpg" alt=""></a>
                         </div>
                         <div class="game-content">
-                            <h4><a href="https://github.com/irvingpercam/daw" target="_blank">the elder scroll</a></h4>
+                            <h4><a href="https://github.com/irvingpercam/daw" target="_blank">Lab Pendiente</a></h4>
                             <span>pc/xbox/ps4</span>
                         </div>
                     </div>
@@ -196,10 +196,10 @@
                     <!--Single Game Start-->
                     <div class="single-game mb-50">
                         <div class="game-img">
-                            <a href="https://github.com/irvingpercam/daw" target="_blank"><img src="assets/images/game/game3.jpg" alt=""></a>
+                            <a href="https://github.com/irvingpercam/daw" target="_blank"><img src="assets/images/frontend/lab4.jpg" alt=""></a>
                         </div>
                         <div class="game-content">
-                            <h4><a href="https://github.com/irvingpercam/daw" target="_blank">the elder scroll</a></h4>
+                            <h4><a href="https://github.com/irvingpercam/daw" target="_blank">Lab Pendiente</a></h4>
                             <span>pc/xbox/ps4</span>
                         </div>
                     </div>
