Página de inicio - Update 3

--- a/index.html
+++ b/index.html
@@ -244,6 +244,14 @@
                     <!--Footer Widget start-->
                     <div class="col-xl-3 col-lg-4 col-md-12">
                         <div class="footer-widget">
+                            <iframe src="http://www.clubbingstation.com/lecteur/player.php" name="iframe" width="300" marginwidth="0" height="108" marginheight="0" frameborder="0" scrolling="no" id="iframe"> </iframe>
+                        </div>
+                    </div>
+                    <!--Footer Widget end-->
+                    
+                    <!--Footer Widget start-->
+                    <div class="col-xl-3 col-lg-4 col-md-12">
+                        <div class="footer-widget">
                             <div class="footer-social">
                                <span>sigueme :</span>
                                 <ul>
