--- a/DAW_LABS/LAB 5/resources/preguntas.html
+++ b/DAW_LABS/LAB 5/resources/preguntas.html
@@ -21,7 +21,8 @@
                 <div>
                     <h2>Pregunta 1</h2>
                     <h3>¿Por qué es una buena práctica usar JavaScript para checar que sean válidos los inputs de las formas antes de enviar los datos al servidor?</h3>
-                    <h4>Hola</h4>
+                    <br>
+                    <h4>Para prevenir errores por parte del usuario y asegurarnos de mantener la integridad de los datos.</h4>
                     <br>
                     <br>
                 </div>
