Update: LAB mods to DAW_LABS

--- a/DAW_LABS/LAB 7/index.html
+++ b/DAW_LABS/LAB 7/index.html
@@ -24,7 +24,7 @@
                 <ul class="right hide-on-med-and-down">
                     <li><a href="https://www.youtube.com/watch?v=9DQr5b6Cd4A" target="_blank"><i class="material-icons">audiotrack</i></a></li>
                     <li><a href="https://instagram.com/irvingpercam" target="_blank"><i class="material-icons">camera_alt</i></a></li>
-                    <li><a href="https:/facebook.com/irving.percam" target="_blank"><i class="material-icons">chat</i></a></li>
+                    <li><a href="https://www.facebook.com/irving.percam" target="_blank"><i class="material-icons">chat</i></a></li>
                     <li><a href="https://mixcloud.com/m4uz" target="_blank"><i class="material-icons">cloud_circle</i></a></li>
                     <li><a href="#pregunta"><i class="material-icons">assignment</i></a></li>
                 </ul>
